ui: use mono fonts for tabs

--- a/dramatiq_dashboard/templates/_base.html
+++ b/dramatiq_dashboard/templates/_base.html
@@ -179,6 +179,7 @@
       .tabs__tab a {
         display: block;
         padding: 24px;
+        font-family: var(--mono-fontstack);
         font-size: 1rem;
         text-align: center;
         text-transform: uppercase;
