ui: display etas

--- a/dramatiq_dashboard/templates/_base.html
+++ b/dramatiq_dashboard/templates/_base.html
@@ -163,7 +163,8 @@
       .table__number--tertiary {
         color: var(--tertiary);
       }
-      .table__actions {
+      td.table__actions {
+        padding: 0px 12px;
         width: 120px;
         text-align: right;
       }
@@ -194,7 +195,7 @@
       .button {
         background: var(--lighter-bg);
         border: none;
-        padding: 12px 24px;
+        padding: 6px 12px;
         display: inline-block;
         color: #fff;
         cursor: pointer;
@@ -220,6 +221,17 @@
       .button--tertiary {
         background: var(--tertiary);
         color: var(--dark-bg);
+      }
+
+      .em {}
+      .em--primary {
+        color: var(--primary);
+      }
+      .em--secondary {
+        color: var(--secondary);
+      }
+      .em--tertiary {
+        color: var(--tertiary);
       }
 
       @media (min-width: 1024px) {
