--- a/dramatiq_dashboard/templates/_tabs.html
+++ b/dramatiq_dashboard/templates/_tabs.html
@@ -6,6 +6,6 @@
 
 {% macro tab(label, uri, current_tab) %}
   <li class="tabs__tab {% if current_tab == label|lower %}tabs__tab--active{% endif %}">
-    <a href="{{ uri }}">{{ label }}</a>
+    <a href="{{ uri }}">{{ caller() }}</a>
   </li>
 {% endmacro %}
