example: change example code into a crawler

--- a/dramatiq_dashboard/templates/_base.html
+++ b/dramatiq_dashboard/templates/_base.html
@@ -139,6 +139,10 @@
       .table td {
         padding: 12px;
       }
+      .table__subject {
+        width: 60%;
+        word-wrap: anywhere;
+      }
       .table__subject a {
         color: #fff;
         font-size: 1rem;
