app: show job details

--- a/dramatiq_dashboard/templates/_base.html
+++ b/dramatiq_dashboard/templates/_base.html
@@ -45,6 +45,11 @@
         text-decoration: underline;
       }
 
+      pre {
+        font-family: var(--mono-fontstack);
+        font-size: 0.8rem;
+      }
+
       .container {
         margin: 0 auto;
       }
@@ -129,6 +134,7 @@
       }
       .table th {
         padding: 12px;
+        cursor: default;
         font-family: var(--mono-fontstack);
         font-size: 0.8rem;
         font-weight: 300;
